test/expected/set_graphs.out
cdecl> set graphs
           ^
5: error: "no" required for "graphs"
